--- a/bee_group_project.Rmd
+++ b/bee_group_project.Rmd
@@ -15,11 +15,8 @@ library(landscapemetrics) # does things by class!
 library(RcppArmadillo)
 library(tigris)
 library(tidyverse)
-<<<<<<< HEAD
-=======
 library(igraph) #for networks
 library(networkD3) #also for networks
->>>>>>> d25d2da9bd4bda9b8c57c2feb3ac088a389c23d1
 ```
 
 
@@ -39,12 +36,9 @@ or <- states(cb = TRUE, year = 2020) %>%
 # crop nlcd to oregon 
 nlcd_or <- crop(nlcd_landcover, vect(or))
 nlcd_or <- mask(nlcd_or, vect(or))
-<<<<<<< HEAD
-=======
-
 # Plot to check
 plot(nlcd_or)
->>>>>>> d25d2da9bd4bda9b8c57c2feb3ac088a389c23d1
+
 ```
 
 ```{r}
@@ -126,37 +120,30 @@ nlcd_classes <- tibble::tibble(
 )
 
 #join desired classes to bees 
-oba_sf_counties <- oba_sf_counties %>%
-<<<<<<< HEAD
+oba_sf_counties <- oba_sf %>%
   left_join(nlcd_classes, by = c("landcover"))
 
 ```
 
 
 
-=======
-  left_join(nlcd_classes, by = c("landcover_value" = "landcover"))
-
-
-table(oba_sf$landcover_name, useNA = "ifany")
-
-```
->>>>>>> d25d2da9bd4bda9b8c57c2feb3ac088a389c23d1
 ```{r}
 # Bee summary by land types
 
 bees <- oba_sf_counties %>% 
   st_set_geometry(NULL) %>% 
-<<<<<<< HEAD
+
   group_by(landcover) %>%
-=======
+
   group_by(landcover_name) %>%
->>>>>>> d25d2da9bd4bda9b8c57c2feb3ac088a389c23d1
+
   summarise(count = n()) %>% 
   arrange(desc(count))
 
 bees
 ```
+
+
 ```{r}
 # pick my counties I want to analyze 
 or_counties <- counties(state = "OR", year = 2020) %>% 
@@ -165,6 +152,12 @@ or_counties <- counties(state = "OR", year = 2020) %>%
 selected_counties <- or_counties %>%
   filter(NAME %in% c("Wheeler County", "Multnomah County"))
 ```
+
+
+
+
+
+
 
 ```{r}
 # cropping the two counties and plotting them as a comparison
@@ -176,13 +169,11 @@ selected_counties <- or_counties %>%
 nlcd_counties <- crop(nlcd_or, vect(selected_counties))
 nlcd_counties <- mask(nlcd_counties, vect(selected_counties))
 
-<<<<<<< HEAD
 # Creating a smaller sample size, loads easier
 nlcd_counties_small <- terra::aggregate(nlcd_counties, fact = 5)
 # convert to data frame for readability 
-=======
 nlcd_counties_small <- terra::aggregate(nlcd_counties, fact = 5)
->>>>>>> d25d2da9bd4bda9b8c57c2feb3ac088a389c23d1
+
 nlcd_counties_df <- as.data.frame(nlcd_counties_small, xy = TRUE)
 
 # Add urban/rural classification
@@ -193,6 +184,8 @@ nlcd_counties_df$urban_rural <- ifelse(
 )
 
 ```
+
+
 ```{r}
 # filtering for bees in these counties 
 # Transform bees to the same CRS
@@ -215,26 +208,14 @@ ggplot() +
     fill = "Land Type"
   ) +
   scale_fill_manual(values = c("Rural" = "forestgreen", "Urban" = "red"))
-
 ```
-
-
-
-<<<<<<< HEAD
-```{r}
-# Which species uses which landscape, this is a species x landcover x bee count table, 
-species_landcover <- oba_sf %>%
-  st_set_geometry(NULL) %>%
-  group_by(genus, specificEpithet, landcover) %>%
-=======
 
 
 ```{r}
 # Which species uses which landscape, this is a species x landcover x counts table, 
 species_landcover <- oba_sf %>%
   st_set_geometry(NULL) %>%
-  group_by(genus, specificEpithet, landcover_value) %>%
->>>>>>> d25d2da9bd4bda9b8c57c2feb3ac088a389c23d1
+  group_by(genus, specificEpithet, landcover) %>%
   summarise(count = n()) %>%
   arrange(desc(count))
 ```
@@ -266,20 +247,9 @@ ggplot(nlcd_df, aes(x = x, y = y, fill = urban_rural)) +
   scale_fill_manual(values = c("Rural" = "lightblue", "Urban" = "red")) +
   coord_equal() +
   labs(title = "Oregon Land Cover (Urban vs Rural)")
-
-# TAKE THIS, PLOT OVER BEE DENSITY/DISTRIBUTION !!!!!!!!!!!!!
-
-```
-
-<<<<<<< HEAD
-```{r}
-# plotting bee density/distribution 
-
 ```
 
 
-
-=======
 
 ```{r}
 ggplot() +
@@ -287,23 +257,20 @@ ggplot() +
   geom_sf(data = oba_sf, color = "cornflowerblue") +
   coord_sf() +
   labs(title = "Bees on Oregon Landcover")
-
 ```
->>>>>>> d25d2da9bd4bda9b8c57c2feb3ac088a389c23d1
+
 ```{r}
 # county x landcover, wheeler and multnomah broken down by landcover type
 bees_by_county <- oba_sf_counties %>%
   st_set_geometry(NULL) %>%
-<<<<<<< HEAD
   group_by(county, landcover) %>%
   summarise(count = n(), .groups = "drop") %>%
   arrange(county, desc(count))
-=======
-  group_by(NAME, landcover_value) %>%
+
+  group_by(NAME, landcover) %>%
   summarise(count = n(), .groups = "drop") %>%
   arrange(NAME, desc(count))
->>>>>>> d25d2da9bd4bda9b8c57c2feb3ac088a389c23d1
-
+  
 bees_by_county
 ```
 
@@ -312,16 +279,12 @@ bees_by_county
 # Create urban/rural column
 oba_sf_counties <- oba_sf_counties %>%
   mutate(urban_rural = ifelse(
-<<<<<<< HEAD
-    landcover %in% c(21, 22, 23, 24), "Urban", "Rural"
-=======
-    landcover_value %in% c(21, 22, 23, 24), "Urban", "Rural"
->>>>>>> d25d2da9bd4bda9b8c57c2feb3ac088a389c23d1
-  ))
+landcover %in% c(21, 22, 23, 24), "Urban", "Rural"
+ ))
 
 # Summarize counts
 bees_county_urban <- oba_sf_counties %>%
-<<<<<<< HEAD
+
   filter(county %in% c("Wheeler", "Multnomah")) %>%
   st_set_geometry(NULL) %>%
   group_by(county, urban_rural) %>%
@@ -329,14 +292,13 @@ bees_county_urban <- oba_sf_counties %>%
 
 # Plot
 ggplot(bees_county_urban, aes(x = county, y = count, fill = urban_rural)) +
-=======
+
   st_set_geometry(NULL) %>%
   group_by(NAME, urban_rural) %>%
   summarise(count = n(), .groups = "drop")
 
 # Plot
 ggplot(bees_county_urban, aes(x = NAME, y = count, fill = urban_rural)) +
->>>>>>> d25d2da9bd4bda9b8c57c2feb3ac088a389c23d1
   geom_col(position = "dodge") +
   scale_fill_manual(values = c("Rural" = "salmon4", "Urban" = "lightsteelblue3")) +
   labs(
@@ -348,10 +310,6 @@ ggplot(bees_county_urban, aes(x = NAME, y = count, fill = urban_rural)) +
   theme_minimal()
 
 ```
-
-<<<<<<< HEAD
-=======
-
 
 ```{r}
 oba_df <- oba
@@ -366,7 +324,6 @@ sort(unique(oba_df$PlantSpecies), decreasing = FALSE)
 ```
 
 ```{r}
-
 subsetted_oba_for_bees <- oba_df %>%
   group_by(BeeSpecies, Lat_Long) %>%
   summarize(value = n()) %>%
@@ -382,7 +339,6 @@ glimpse(subsetted_oba_for_plants)
 ```
 
 ```{r}
-
 oba_network_bees <- graph_from_data_frame(subsetted_oba_for_bees, 
                                           directed = TRUE)
 oba_network_plants <- graph_from_data_frame(subsetted_oba_for_plants,
@@ -416,4 +372,3 @@ sankeyNetwork(Links =plant_3d$links, Nodes = plant_3d$nodes,
               nodePadding = 0, height = 100000)
 ```
 
->>>>>>> d25d2da9bd4bda9b8c57c2feb3ac088a389c23d1
